force-app/main/default/objects/FSM_SendFileEvent__e/FSM_SendFileEvent__e.object-meta.xml
<CustomObject>
    <label>Send File Event</label>
    <pluralLabel>Send File Events</pluralLabel>
</CustomObject>