force-app/main/default/objects/FSM_SendFileEvent__e/fields/FSM_ContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>FSM_ContentVersionId__c</fullName>
    <label>Content Version Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>