force-app/main/default/objects/FSM_SendFileEvent__e/fields/FSM_InterfaceName__c.field-meta.xml
<CustomField>
    <fullName>FSM_InterfaceName__c</fullName>
    <label>Interface Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>