force-app/main/default/objects/FSM_SendFileEvent__e/fields/FSM_WOExternalId__c.field-meta.xml
<CustomField>
    <fullName>FSM_WOExternalId__c</fullName>
    <label>WO External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>