force-app/main/default/objects/FSM_SendFileEvent__e/fields/FSM_WorkOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorkOrderNumber__c</fullName>
    <label>Work Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>